# WebTerminal

./: .env  Cargo.toml  Justfile  README.md  test.rest
public/terminal/: index.html
public/terminal/assets/: index-BI6kmDHR.js  index-BRlfucgC.css
src/: lib.rs  main.rs  service.rs  shell.rs
webpage/: index.html  package-lock.json  package.json
webpage/src/: main.js  style.css
