[package]
name = "WebTerminal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "ws"] }
dotenvy = "0.15.7"
encoding_rs = "0.8"
futures-util = "0.3"
seqsee = "0.1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
